# systemstate

./: CMakeLists.txt
debian/: changelog  control  libsystemstate-contextsubscriber-dev.install  qml-module-crowd-systemstate.install  rules  systemstate-dev.install  systemstate-plugin-hwhal.install  systemstate-plugin-test.install  systemstate-plugin-test2.install  systemstate-tools.install  systemstate.install
lib/: CMakeLists.txt  libixp.h  protocol.cpp  protocol.h  protocol.proto  stateplugin.cpp  stateplugin.h  utils.cpp  utils.h
loaders/: CMakeLists.txt  default.cpp  loader.cpp  loader.h
plugins/: CMakeLists.txt  hwhal.cpp  hwhal.h  hwhal.ini  test.cpp  test2.cpp  testplugin.ini  testplugin2.ini
qt/: CMakeLists.txt  connection.cpp  connection.h  contextproperty.cpp  contextproperty.h  contextsubscriber-1.0.pc.template  declarativecontextproperty.cpp  declarativecontextproperty.h  qmldir
src/: CMakeLists.txt  fidaux.cpp  fidaux.h  main.cpp  plugindb.cpp  plugindb.h  pluginloader.cpp  pluginloader.h  process.cpp  process.h  server.cpp  server.h
tools/: CMakeLists.txt  common.cpp  common.h  get.cpp  ls.cpp  ping.cpp  watch.cpp  write.cpp
